--- a/lang/en.json
+++ b/lang/en.json
@@ -25,7 +25,7 @@
     },
     "Settings": {
       "window-title": "Configure Popcorn Initiative",
-      "close.button": "Close",
+      "close.button": "Save & Close",
       "configure.button": "Configure",
       "configuration.title": "Configuration",
       "override-next-turn-title": "Override \"Next Turn\" and \"End Turn\" button",
