--- a/lang/en.json
+++ b/lang/en.json
@@ -1,63 +1,62 @@
 {
-  "JPI" : {
-    "Window" : {
-      "previous-actors.title" : "Previous Actors",
-      "selectable-actors.title" : "Selectable Actors",
-      "tools.title" : "Tools",
-      "tools.select-from-token.tooltip" : "Select from Token",
-      "tools.zoom-combatant.tooltip" : "Zoom on Selected Combatant",
-      "tools.configuration.tooltip" : "Open the Configuration Window",
-      "tools.change-avatar-size.tooltip" : "Change actor size",
-      "tools.toggleStats.tooltip" : "Toggle stats visibility",
-      "combatant-picker.title" : "Select a Token inside the canvas <br>or</br> Press here to cancel",
-      "confirm.button" : "Confirm",
-      "close.button" : "Close"
+  "JPI": {
+    "Window": {
+      "previous-actors.title": "Previous Actors",
+      "selectable-actors.title": "Selectable Actors",
+      "tools.title": "Tools",
+      "tools.select-from-token.tooltip": "Select from Token",
+      "tools.zoom-combatant.tooltip": "Zoom on Selected Combatant",
+      "tools.configuration.tooltip": "Open the Configuration Window",
+      "tools.toggleStats.tooltip": "Toggle stats visibility",
+      "combatant-picker.title": "Select a Token inside the canvas <br>or</br> Press here to cancel",
+      "confirm.button": "Confirm",
+      "close.button": "Close"
     },
-    "SystemMessage" : {
-      "EndTurnNoCombat" : "Can't end turn. No combat is currently active.",
-      "EndTurnNoCombatantPlaying" : "Can't end turn. No combatant is currently playing.",
-      "EndTurnActorIsNotValid" : "Can't end turn. The current actor in combat is not valid.",
-      "EndTurnNotYourTurn" : "Can't end turn. It's not your turn yet.",
-      "EndTurnInvalidSelectedCombatant" : "Can't end turn. The selected combatant can't be found.",
-      "EndTurnLastOrSecondLast" : "Can't pass turn to another combatant. The current combatant is the last on this round.",
-      "EndTurnInvalidCombatId" : "A request to end turn can't be performed. The combatId provided is not valid.",
-      "TryGetTokenInvalidId" : "Can't find the token. The provided combatant id can't be found.",
-      "TryGetTokenInvalidCombatantId" : "Can't find the token. The provided token id is invalid.",
-      "ConfigNoPermission" : "You have no permission to change initiative configuration."
+    "SystemMessage": {
+      "EndTurnNoCombat": "Can't end turn. No combat is currently active.",
+      "EndTurnNoCombatantPlaying": "Can't end turn. No combatant is currently playing.",
+      "EndTurnActorIsNotValid": "Can't end turn. The current actor in combat is not valid.",
+      "EndTurnNotYourTurn": "Can't end turn. It's not your turn yet.",
+      "EndTurnInvalidSelectedCombatant": "Can't end turn. The selected combatant can't be found.",
+      "EndTurnLastOrSecondLast": "Can't pass turn to another combatant. The current combatant is the last on this round.",
+      "EndTurnInvalidCombatId": "A request to end turn can't be performed. The combatId provided is not valid.",
+      "TryGetTokenInvalidId": "Can't find the token. The provided combatant id can't be found.",
+      "TryGetTokenInvalidCombatantId": "Can't find the token. The provided token id is invalid.",
+      "ConfigNoPermission": "You have no permission to change initiative configuration."
     },
-    "Settings" : {
-      "window-title" : "Configure Popcorn Initiative",
-      "close.button" : "Save & Close",
-      "configure.button" : "Configure",
-      "configuration.title" : "Configuration",
-      "override-next-turn-title" : "Override \"Next Turn\" and \"End Turn\" button",
-      "override-next-turn-description" : "Automatically show the Window to pick the next actor when pressing \"End\" or \"Next\" turn buttons from Combat Tracker. ( Reload Required )",
-      "select-when-round-is-over-title" : "Let the Last actor choose",
-      "select-when-round-is-over-description" : "Enable last actor to choose first combatant of next round.",
-      "select-themselves-when-round-is-over-title" : "Allow Self-Selection at the start of the next round",
-      "select-themselves-when-round-is-over-description" : "Activate the option for a player to independently select themselves as the subsequent participant for consecutive rounds. This provides the player with the ability to maintain their position in the ongoing sequence if they so desire.",
-      "selection-window-size-title" : "Selection Window size",
-      "selection-window-size-description" : "Select the size of the window from these two presets. ( Normal, Mini )",
-      "selection-window-size-mini" : "Mini",
-      "selection-window-size-normal" : "Normal",
-      "selection-window-position-title" : "Selection Window position",
-      "selection-window-position-description" : "Select the position of the selection window.",
-      "selection-window-theme-title" : "Current Theme",
-      "selection-window-theme-description" : "Select the theme style.",
-      "selection-window-stats-title" : "Stats",
-      "selection-window-stats-description" : "All the stats to show near each combatant",
-      "selection-window-icon-type-title" : "Combatant Icon",
-      "selection-window-icon-type-description" : "Select the icon to show when selecting the next combatant in turn",
-      "selection-window-icon-type-token" : "Token",
-      "selection-window-icon-type-actor" : "Actor",
-      "selection-window-position-topLeft" : "Top Left",
-      "selection-window-position-topRight" : "Top Right",
-      "selection-window-position-bottomLeft" : "Bottom Left",
-      "selection-window-position-bottomRight" : "Bottom Right",
-      "selection-window-position-free" : "Free",
-      "selection-window-position-center" : "Center",
-      "install-common-macros-title" : "Install common macros",
-      "install-common-macros-description" : "New macros will be added to your libraries. One is used to select the next actor in the combat tracker and the other one used to open the configuration window"
+    "Settings": {
+      "window-title": "Configure Popcorn Initiative",
+      "close.button": "Save & Close",
+      "configure.button": "Configure",
+      "configuration.title": "Configuration",
+      "override-next-turn-title": "Override \"Next Turn\" and \"End Turn\" button",
+      "override-next-turn-description": "Automatically show the Window to pick the next actor when pressing \"End\" or \"Next\" turn buttons from Combat Tracker. ( Reload Required )",
+      "select-when-round-is-over-title": "Let the Last actor choose",
+      "select-when-round-is-over-description": "Enable last actor to choose first combatant of next round.",
+      "select-themselves-when-round-is-over-title": "Allow Self-Selection at the start of the next round",
+      "select-themselves-when-round-is-over-description": "Activate the option for a player to independently select themselves as the subsequent participant for consecutive rounds. This provides the player with the ability to maintain their position in the ongoing sequence if they so desire.",
+      "selection-window-theme-title": "Current Theme",
+      "selection-window-theme-description": "Select the theme style.",
+      "selection-window-stats-title": "Stats",
+      "selection-window-stats-description": "All the stats to show near each combatant",
+      "selection-window-icon-type-title": "Combatant Icon",
+      "selection-window-icon-type-description": "Select the icon to show when selecting the next combatant in turn",
+      "selection-window-icon-type-token": "Token",
+      "selection-window-icon-type-actor": "Actor",
+      "selection-window-anchor-title": "Selection Window position",
+      "selection-window-anchor-description": "Select the position of the selection window.",
+      "selection-window-anchor-topLeft": "Top Left",
+      "selection-window-anchor-topRight": "Top Right",
+      "selection-window-anchor-bottomLeft": "Bottom Left",
+      "selection-window-anchor-bottomRight": "Bottom Right",
+      "selection-window-anchor-free": "Free",
+      "selection-window-anchor-center": "Center",
+      "reset-to-default-title": "Reset",
+      "reset-to-default-description": "Reset all the configuration values to the default values. This operation can't be undone.",
+      "reset-to-default-modal-title": "Reset to Default Values",
+      "reset-to-default-modal-description": "Are you sure you want to reset all the configuration to their default values? ( This operation can't be undone )",
+      "install-common-macros-title": "Install macros",
+      "install-common-macros-description": "New macros will be added to your library. One is used to select the next actor in the combat tracker and the other one used to open the configuration window"
     }
   }
 }
