- Next grid - New configuration - Theme support - Stats viewer

--- a/lang/en.json
+++ b/lang/en.json
@@ -3,7 +3,7 @@
     "Window": {
       "previous-actors.title": "Previous Actors",
       "selectable-actors.title": "Selectable Actors",
-      "tools.title": "Tools",
+      "selection-window-title": "Select the next Actor",
       "tools.select-from-token.tooltip": "Select from Token",
       "tools.zoom-combatant.tooltip": "Zoom on Selected Combatant",
       "tools.configuration.tooltip": "Open the Configuration Window",
@@ -29,8 +29,8 @@
       "close.button": "Save & Close",
       "configure.button": "Configure",
       "configuration.title": "Configuration",
-      "override-next-turn-title": "Override \"Next Turn\" and \"End Turn\" button",
-      "override-next-turn-description": "Automatically show the Window to pick the next actor when pressing \"End\" or \"Next\" turn buttons from Combat Tracker. ( Reload Required )",
+      "override-next-turn-title": "Override \"Combat Tracker\" buttons",
+      "override-next-turn-description": "Automatically prompt the Selection Window when pressing \"End\" or \"Next\" turn buttons from Combat Tracker. ( Reload Required )",
       "select-when-round-is-over-title": "Let the Last actor choose",
       "select-when-round-is-over-description": "Enable last actor to choose first combatant of next round.",
       "select-themselves-when-round-is-over-title": "Allow Self-Selection at the start of the next round",
@@ -51,6 +51,14 @@
       "selection-window-anchor-bottomRight": "Bottom Right",
       "selection-window-anchor-free": "Free",
       "selection-window-anchor-center": "Center",
+      "stat.clipboard": "The stat has been copied to the clipboard",
+      "pick-stat.title": "Pick a stat to be displayed",
+      "toggle-player-visibility.title": "Show/Hide this stat to the player",
+      "stats.tab": "Stats",
+      "hidden": "Current Value: Hidden",
+      "visible": "Current Value: Visible",
+      "general.tab": "General",
+      "combatant-preview-title": "Preview",
       "reset-to-default-title": "Reset",
       "reset-to-default-description": "Reset all the configuration values to the default values. This operation can't be undone.",
       "reset-to-default-modal-title": "Reset to Default Values",
